
syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/route_guide/routeguide";
option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package routeguide;

// Interface exported by the server.
service RouteGuide {
  

  rpc GetStock(StockName) returns (Stock) {}
  rpc CreateStock(StockUpdate) returns (Error) {}
  rpc UpdateStock(StockUpdate) returns (Error) {}

}

message StockName {
  string name = 1;
}

message Error {
  int32 code = 1;
  string info = 2;
}

message RouteNote {
  // The message to be sent.
  string message = 1;
}

message HistoricalPriceInfo {
  float price = 1;
  string date = 2;
}

message Stock {
  string name = 1;
  repeated HistoricalPriceInfo historicalinfo = 2;
}

message StockUpdate {
  string name = 1;
  float price = 2;
}


